# doufu

./: .gitignore  Makefile.am  README.md  configure.ac
barrier/: Makefile.am  main.cpp  server.hpp  worker.cpp  worker.hpp
coordinator/: Makefile.am
docs/presentation/: build.sh  doufu.cfg  doufu.md
docs/presentation/themes/: base.html
docs/presentation/themes/css/: screen.css
include/: block_queue.h  block_queue.hpp  config.h.in  noncopyable.h  noncopyable.hpp  pthread.h  pthread.hpp
include/protocol/: minitrans.hpp
